--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -6,17 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="styles/flowchart.css"/>
 </head>
 
-<body>
-	<div id="reactHolder"></div>
-	<form style="border: 1px black solid; display: inline-block; padding: 15px;">
-		holderName: <input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
-		number: <input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
-		expiryYear: <input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
-		expiryMonth: <input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
-		cvc: <input class="formEls" type="text" name="cvc" value="737"></input><br>
-		value: <input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
-		currency: <input class="formEls" type="text" name="currency" value="EUR"></input><br>
-		reference: <input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
+<body class="dark">
+	<form class="clientForm dark">
+		<label>holderName: </label><input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
+		<label>number: </label><input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
+		<label>expiryYear: </label><input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
+		<label>expiryMonth: </label><input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
+		<label>cvc: </label><input class="formEls" type="text" name="cvc" value="737"></input><br>
+		<label>value: </label><input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
+		<label>currency: </label><input class="formEls" type="text" name="currency" value="EUR"></input><br>
+		<label>reference: </label><input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
 		<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
 		<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
 		<div id="authoriseBtnHolder"></div>
@@ -34,12 +33,26 @@
 
 	<h3>Network activity</h3>
 	<div id="output" style="width: 50%;"></div>
-	<div id="sdkContainer" class="hidden" style="display: inline-block"></div>
+	<div id="sdkContainer" class="hidden challenge-iframe" style="display: inline-block"></div>
 	
 	<div class="flowchart-background">
 		<figure class="flowchart">
 			<ul id="flowchart" class="tree"></ul>
 		</figure>
+		<div class="flowchart-legend">
+			<div>
+				<label class="active-state-label">Active state</label>
+				<span class="flowchart-color-swatch active-state-legend"></span>
+			</div>
+			<div>
+				<label class="previous-state-label">Previous state</label>
+				<span class="flowchart-color-swatch previous-state-legend"></span>
+			</div>
+			<div>
+				<label class="unreachable-state-label">Unreachable state</label>
+				<span class="flowchart-color-swatch unreachable-state-legend"></span>
+			</div>
+		</div>
 	</div>
 </body>
 
@@ -80,7 +93,7 @@ function initialize() {
 						],
 					],
 					"Challenge Failed", [
-						"Retry Challenge",
+						"Retry Validation",
 						"Authorise Unauthenticated"
 					]
 				]
@@ -118,7 +131,7 @@ function fingerprintDevice() {
 
 	// handle SDK promise callbacks
 	fingerprintPromise.then((successfulPromiseResponse) => {
-		common.output("SDK.getFingerprint<br><br>threeDSCompInd=" + successfulPromiseResponse.threeDSCompInd, "Fingerprint response from SDK");
+		common.output("threeDSCompInd=" + successfulPromiseResponse.threeDSCompInd, "Fingerprint response from SDK", "SDK.getFingerprint");
 		globals.fingerprintResponse = successfulPromiseResponse;
 		
 		// enable authorise button
@@ -342,9 +355,9 @@ function highlightPreviousNode(nodeID) {
 // but since the tree won't change, for the sake of simplicity I'm doing it with arrays
 globals.subtree = {
 	frictionless: ["Frictionless"],
-	challengeShopper: ["ChallengeShopper", "ChallengeSuccessful", "AuthoriseWithToken", "RetrieveMPIData", "AuthoriseViaAdyen", "AuthoriseElsewhere", "ChallengeFailed", "RetryChallenge", "AuthoriseUnauthenticated"],
+	challengeShopper: ["ChallengeShopper", "ChallengeSuccessful", "AuthoriseWithToken", "RetrieveMPIData", "AuthoriseViaAdyen", "AuthoriseElsewhere", "ChallengeFailed", "RetryValidation", "AuthoriseUnauthenticated"],
 	challengeSuccessful: ["ChallengeSuccessful","AuthoriseWithToken","RetrieveMPIData","AuthoriseViaAdyen","AuthoriseElsewhere"],
-	challengeFailed: ["ChallengeFailed","RetryChallenge","AuthoriseUnauthenticated"],
+	challengeFailed: ["ChallengeFailed","RetryValidation","AuthoriseUnauthenticated"],
 	retrieveMPIData: ["RetrieveMPIData","AuthoriseViaAdyen","AuthoriseElsewhere"]
 };
 
