--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -86,6 +86,8 @@ const setupCallback = function(data) {
 		console.log(pHookData);
 		
 		// Send data back to parent page
+		console.log(parent);
+		console.log(parent.setPaymentResult);
 		parent.setPaymentResult(pHookData.resultCode);
 
 		if (pHookData.resultCode.toLowerCase() === "authorised") {
