--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -7,36 +7,12 @@
 </head>
 
 <body>
-	<div class="checkout-holder">
-		<form class="clientForm">
-			<label>holderName: </label><input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
-			<label>number: </label><input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
-			<label>expiryYear: </label><input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
-			<label>expiryMonth: </label><input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
-			<label>cvc: </label><input class="formEls" type="text" name="cvc" value="737"></input><br>
-			<label>value: </label><input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
-			<label>currency: </label><input class="formEls" type="text" name="currency" value="EUR"></input><br>
-			<label>reference: </label><input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
-			<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
-			<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
-			<div id="authoriseBtnHolder"></div>
-		</form>
-		<div>
-			<input type="checkbox" id="frictionlessCheckbox"/>
-			<label for="frictionlessCheckbox">Frictionless</label>
-		</div>
-		<div>
-			<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
-			<label for="adyenTokenAuth">Adyen Token Auth</label>
-			<input id="acquirerAgnosticAuth" type="radio" checked="checked" name="transactionTypeRadio" value="acquirerAgnosticAuth">
-			<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
-		</div>
+	<div class="left-column">
+		<h3>Network activity</h3>
+		<div id="output"></div>
 	</div>
-
-	<h3>Network activity</h3>
-	<div id="output" style="width: 50%;"></div>
 	
-	<div class="flowchart-background">
+	<div class="right-column">
 		<figure class="flowchart">
 			<ul id="flowchart" class="tree"></ul>
 		</figure>
@@ -54,7 +30,36 @@
 				<span class="flowchart-color-swatch unreachable-state-legend"></span>
 			</div>
 		</div>
-		<div id="sdkContainer" class="hidden challenge-iframe" style="display: inline-block"></div>
+
+		<div class="center-content">
+			<div class="checkout-holder">
+				<form class="clientForm">
+					<label>holderName: </label><input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
+					<label>number: </label><input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
+					<label>expiryYear: </label><input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
+					<label>expiryMonth: </label><input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
+					<label>cvc: </label><input class="formEls" type="text" name="cvc" value="737"></input><br>
+					<label>value: </label><input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
+					<label>currency: </label><input class="formEls" type="text" name="currency" value="EUR"></input><br>
+					<label>reference: </label><input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
+					<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
+					<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
+					<div id="authoriseBtnHolder"></div>
+				</form>
+				<div>
+					<input type="checkbox" id="frictionlessCheckbox"/>
+					<label for="frictionlessCheckbox">Frictionless</label>
+				</div>
+				<div>
+					<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
+					<label for="adyenTokenAuth">Adyen Token Auth</label><br>
+					<input id="acquirerAgnosticAuth" type="radio" checked="checked" name="transactionTypeRadio" value="acquirerAgnosticAuth">
+					<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
+				</div>
+			</div>
+
+			<div id="sdkContainer" class="hidden challenge-iframe center-content"></div>
+		</div>
 	</div>
 
 </body>
@@ -76,11 +81,12 @@ initialize();
 function initialize() {
 
 	// Add submit button to DOM
-	globals.authoriseButton = document.createElement("button");
-	globals.authoriseButton.onclick = submitForm;
-	globals.authoriseButton.innerHTML = "Authorise";
-	globals.authoriseButton.disabled = true;
-	document.querySelector("#authoriseBtnHolder").appendChild(globals.authoriseButton);
+	const authoriseButton = document.createElement("button");
+	authoriseButton.onclick = submitForm;
+	authoriseButton.innerHTML = "Authorise";
+	authoriseButton.disabled = true;
+	authoriseButton.id = "authoriseBtn";
+	document.querySelector("#authoriseBtnHolder").appendChild(authoriseButton);
 	
 	// add dynamic flowchart
 	let tree = [
@@ -114,25 +120,6 @@ function initialize() {
 	window.onresize = scaleFlowchart;
 }
 
-// scale the flowchart to fit on screen at lower resolutions
-function scaleFlowchart() {
-	const FLOWCHART_MIN_WIDTH = 750;
-	const availableFlowchartWidth = window.innerWidth / 2;
-	if (availableFlowchartWidth < FLOWCHART_MIN_WIDTH) {
-		const el = document.querySelector(".flowchart");
-		const scale = availableFlowchartWidth / FLOWCHART_MIN_WIDTH;
-		console.log(scale);
-		const percentScaleX = "-" + (100 - (scale * 110)).toString() + "%";
-		const percentScaleY = "-" + (100 - (scale * 120)).toString() + "%";
-
-		el.style.webkitTransform = `scale(${scale}) translate(${percentScaleX}, ${percentScaleY})`;
-		el.style.height = (globals.originalFlowchartHeight * scale) + "px";
-	}
-	else {
-		document.querySelector(".flowchart").style.webkitTransform = "";
-	}
-}
-
 // perform fingerprint via SDK on page load
 fingerprintDevice();
 function fingerprintDevice() {
@@ -162,7 +149,7 @@ function fingerprintDevice() {
 		globals.fingerprintResponse = successfulPromiseResponse;
 		
 		// enable authorise button
-		globals.authoriseButton.disabled = false;
+		document.querySelector("#authoriseBtn").disabled = false;
 
 	}, (failedPromiseResponse) => {
 		common.output("Verification request to SDK failed - check log for more details", "Fingerprint response from SDK");
@@ -179,6 +166,9 @@ function submitForm(e) {
 
 	let url = common.SERVER_URL + "?";
 	let jsonData = {}; // JSON object for logging
+
+	// hide checkout form
+	document.querySelector(".checkout-holder").classList.add("display-none");
 	
 	// handle frictionless checkbox
 	if (document.querySelector("#frictionlessCheckbox").checked) {
@@ -345,7 +335,7 @@ function adyenTokenAuthCallback(data) {
 }
 
 //////////////////////////////////
-//			UTILITIES			//
+//		FLOWCHART METHODS		//
 //////////////////////////////////
 
 // automated tree generator
@@ -400,6 +390,29 @@ function makeNodeUnreachable(target) {
 		}
 	}
 }
+
+// scale the flowchart to fit on screen at lower resolutions
+function scaleFlowchart() {
+	const FLOWCHART_MIN_WIDTH = 750;
+	const availableFlowchartWidth = window.innerWidth / 2;
+	if (availableFlowchartWidth < FLOWCHART_MIN_WIDTH) {
+		const el = document.querySelector(".flowchart");
+		const scale = availableFlowchartWidth / FLOWCHART_MIN_WIDTH;
+		console.log(scale);
+		const percentScaleX = "-" + (100 - (scale * 110)).toString() + "%";
+		const percentScaleY = "-" + (100 - (scale * 120)).toString() + "%";
+
+		el.style.webkitTransform = `scale(${scale}) translate(${percentScaleX}, ${percentScaleY})`;
+		el.style.height = (globals.originalFlowchartHeight * scale) + "px";
+	}
+	else {
+		document.querySelector(".flowchart").style.webkitTransform = "";
+	}
+}
+
+//////////////////////////////
+//		UTILITY METHODS		//
+//////////////////////////////
 
 // gets state of auth flow radio buttons
 function getSelectedAuthFlow() {
