--- a/3DSecure2AdvancedCustomSDK.html
+++ b/3DSecure2AdvancedCustomSDK.html
@@ -8,54 +8,60 @@
 
 <body>
 	<div class="left-column">
-		<h3>Network activity</h3>
+		<h2>Network activity</h2>
 		<div id="output"></div>
 	</div>
 	
-	<div class="right-column">
-		<figure class="flowchart">
-			<ul id="flowchart" class="tree"></ul>
-		</figure>
-		<div class="flowchart-legend">
-			<div>
-				<label>Active state</label>
-				<span class="flowchart-color-swatch active-state-legend"></span>
-			</div>
-			<div>
-				<label>Previous state</label>
-				<span class="flowchart-color-swatch previous-state-legend"></span>
-			</div>
-			<div>
-				<label>Unreachable state</label>
-				<span class="flowchart-color-swatch unreachable-state-legend"></span>
+	<div class="right-column fixed">
+		<div class="flowchart-container">
+			<figure class="flowchart">
+				<ul id="flowchart" class="tree"></ul>
+			</figure>
+			<div class="flowchart-legend center-content">
+				<div>
+					<label>Current state</label>
+					<span class="flowchart-color-swatch active-state-legend"></span>
+				</div>
+				<div>
+					<label>Previous state</label>
+					<span class="flowchart-color-swatch previous-state-legend"></span>
+				</div>
+				<div>
+					<label>Unreachable state</label>
+					<span class="flowchart-color-swatch unreachable-state-legend"></span>
+				</div>
 			</div>
 		</div>
 
 		<div class="center-content">
 			<div class="checkout-holder">
-				<form class="clientForm">
-					<label>holderName: </label><input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
-					<label>number: </label><input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
-					<label>expiryYear: </label><input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
-					<label>expiryMonth: </label><input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
-					<label>cvc: </label><input class="formEls" type="text" name="cvc" value="737"></input><br>
-					<label>value: </label><input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
-					<label>currency: </label><input class="formEls" type="text" name="currency" value="EUR"></input><br>
-					<label>reference: </label><input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
-					<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
-					<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
-					<div id="authoriseBtnHolder"></div>
-				</form>
-				<div>
-					<input type="checkbox" id="frictionlessCheckbox"/>
-					<label for="frictionlessCheckbox">Frictionless</label>
-				</div>
-				<div>
-					<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
-					<label for="adyenTokenAuth">Adyen Token Auth</label><br>
-					<input id="acquirerAgnosticAuth" type="radio" checked="checked" name="transactionTypeRadio" value="acquirerAgnosticAuth">
-					<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
-				</div>
+				<span>
+					<form class="clientForm">
+						<label>holderName: </label><input class="formEls" type="text" name="holderName" value="Theresa Cure"></input><br>
+						<label>number: </label><input class="formEls" type="text" name="number" value="4111111111111111"></input><br>
+						<label>expiryYear: </label><input class="formEls" type="text" name="expiryYear" value="2020"></input><br>
+						<label>expiryMonth: </label><input class="formEls" type="text" name="expiryMonth" value="10"></input><br>
+						<label>cvc: </label><input class="formEls" type="text" name="cvc" value="737"></input><br>
+						<label>value: </label><input id="valueInput" class="formEls" type="text" name="value" value="1499"></input><br>
+						<label>currency: </label><input class="formEls" type="text" name="currency" value="EUR"></input><br>
+						<label>reference: </label><input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
+						<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
+						<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
+						<div id="authoriseBtnHolder"></div>
+					</form>
+				</span>
+				<span>
+					<div>
+						<input type="checkbox" id="frictionlessCheckbox"/>
+						<label for="frictionlessCheckbox">Frictionless</label>
+					</div>
+					<div>
+						<input id="adyenTokenAuth" type="radio" name="transactionTypeRadio" value="adyenTokenAuth">
+						<label for="adyenTokenAuth">Adyen Token Auth</label><br>
+						<input id="acquirerAgnosticAuth" type="radio" checked="checked" name="transactionTypeRadio" value="acquirerAgnosticAuth">
+						<label for="acquirerAgnosticAuth">Acquirer Agnostic Auth</label>
+					</div>
+				</span>
 			</div>
 
 			<div id="sdkContainer" class="hidden challenge-iframe center-content"></div>
@@ -398,7 +404,6 @@ function scaleFlowchart() {
 	if (availableFlowchartWidth < FLOWCHART_MIN_WIDTH) {
 		const el = document.querySelector(".flowchart");
 		const scale = availableFlowchartWidth / FLOWCHART_MIN_WIDTH;
-		console.log(scale);
 		const percentScaleX = "-" + (100 - (scale * 110)).toString() + "%";
 		const percentScaleY = "-" + (100 - (scale * 120)).toString() + "%";
 
