--- a/3DSecure2.html
+++ b/3DSecure2.html
@@ -3,6 +3,7 @@
 <head>
 	<title>3DS 2.0</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"/>
+	<link rel="stylesheet" type="text/css" href="styles/flowchart.css"/>
 	<script id="SDK" type="text/javascript" src="scripts/threedsSDK.0.9.5.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
@@ -20,8 +21,9 @@
 		reference: <input class="formEls" type="text" name="reference" value="Localhost 3DS 2.0"></input><br>
 		<input class="formEls" type="hidden" name="endpoint" value="threeds2_part1"></input>
 		<input class="formEls" type="hidden" name="userAgent" value="threeds2_part1"></input>
+		<div id="authoriseBtnHolder"></div>
 	</form>
-	<button onClick="submitForm()">Authorise</button>
+	
 	<h3>Network activity</h3>
 	<div id="output" style="width: 50%"></div>
 	<div id="sdkContainer"></div>
@@ -29,12 +31,59 @@
 
 </html>
 
-<script>
+<script type="module">
+
+import * as common from "./scripts/common.js";
 
 const SERVER_URL = "http://localhost:8000/cgi-bin/submit.py";
 const NOTIFICATION_URL = SERVER_URL + "?endpoint=threeds2_result_page";
 
 var globals = {};
+
+// get everything ready
+// get everything ready to go
+initialize();
+function initialize() {
+
+	// Add submit button to DOM
+	const authoriseButton = document.createElement("button");
+	authoriseButton.onclick = submitForm;
+	authoriseButton.innerHTML = "Authorise";
+	authoriseButton.disabled = true;
+	authoriseButton.id = "authoriseBtn";
+	document.querySelector("#authoriseBtnHolder").appendChild(authoriseButton);
+	
+	// add dynamic flowchart
+	let tree = [
+		"Get3dsAvailability", [
+			"Fingerprint Device", [
+				"Frictionless",
+				"Challenge Shopper", [
+					"Challenge Successful", [
+						"Authorise With Token",
+						"Retrieve MPI Data", [
+							"Authorise Via Adyen",
+							"Authorise Elsewhere"
+						],
+					],
+					"Challenge Failed", [
+						"Retry Validation",
+						"Authorise Unauthenticated"
+					]
+				]
+			]
+		]
+	];
+	document.querySelector("#flowchart").innerHTML = generateTreeHTML(tree);
+
+	// pretend we have cached data on the card
+	common.output('"threeDS2Version": "2.1.0"<br>"threeDSMethodURL": "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml"', "Query cached 3ds2 data");
+
+	// make sure the flowchart fits on screen
+	globals.originalFlowchartHeight = document.querySelector(".flowchart").getBoundingClientRect().height;
+	scaleFlowchart();
+	window.onresize = scaleFlowchart;
+}
 
 // send form data to server
 function submitForm(e) {	
@@ -42,23 +91,23 @@ function submitForm(e) {
 	var params = "?";
 	
 	// form encode data and send to server
-	var formEls = $(".formEls");
+	var formEls = document.querySelector(".formEls");
 	var jsonData = {};
 	for (i = 0; i < formEls.length; i++) {
-		params = params + encodeURIComponent(formEls[i].name) + "=" + encodeURIComponent(formEls[i].value) + "&"
+		params = params + encodeURIComponent(formEls[i].name) + "=" + encodeURIComponent(formEls[i].value) + "&";
 		jsonData[formEls[i].name] = formEls[i].value;
 	}
 	url = url + params;
 
 	output(0, "Request from client to server:<br>" + JSON.stringify(jsonData, null, 4));
 
-	$.get(url, authoriseCallback);
+	common.AJAXGet(url, initialAuthoriseCallback);
 
 	return false;
-};
+}
 
 // callback from sending form to server
-function authoriseCallback(data, status) {
+function initialAuthoriseCallback(data, status) {
 	data = sanitizeJSON(data);
 
 	const request = data.request;
@@ -74,7 +123,7 @@ function authoriseCallback(data, status) {
 	if (response.resultCode == "IdentifyShopper") {
 		fingerprintDevice(response);
 	}
-};
+}
 
 // perform fingerprint via SDK
 function fingerprintDevice(authoriseResponse) {
@@ -104,8 +153,8 @@ function SDKFingerprintCallback(response) {
 	var url = SERVER_URL;
 	var params = "?threeDSCompInd=" + response.threeDSCompInd + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&endpoint=threeds2_part2";
 
-	$.get(url + params, authorise3ds2Callback)
-};
+	common.AJAXGet(url + params, authorise3ds2Callback);
+}
 
 // reads response from /authorise3ds2 call following fingerprinting
 // initiates SDK challenge if (response.resultCode === "ThreeDS2Challenge")
@@ -122,7 +171,7 @@ function authorise3ds2Callback(data, status) {
 	if (response.resultCode === "ChallengeShopper") {
 		initiateChallenge(response);
 	}
-};
+}
 
 // passes information from /authorise3ds2 call to SDK to perform challenge
 function initiateChallenge(authoriseResponse) {
@@ -134,11 +183,11 @@ function initiateChallenge(authoriseResponse) {
 		messageVersion : authoriseResponse.additionalData['threeds2.threeDS2ResponseData.messageVersion'],
 		messageType : 'CReq',
 		challengeWindowSize: '01'
-	}
+	};
 	const iframeConfig = {
 		size: '01', // The size you'd like the iframe to be can be '01' - '05' as documented
 		container: document.querySelector("#sdkContainer") // Container to place the generated iframe into OR an actual iframe
-	}
+	};
 
 	// create the iframe for the promise
 	threedsSDK.doChallenge(acsURL, cReqData, iframeConfig).then(handleSuccessfulSDKChallengePromise, handleFailedSDKChallengePromise);
@@ -176,7 +225,7 @@ function handleFailedSDKChallengePromise(failedPromiseResponse) {
 // perform authorisation with completed challenge
 function finalAuthorisation(transStatus) {
 	url = SERVER_URL + "?endpoint=threeds2_auth_via_token" + "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token) + "&transStatus=" + transStatus;
-	$.get(url, finalAuthorisationCallback);
+	common.AJAXGet(url, finalAuthorisationCallback);
 }
 
 // final auth result
@@ -197,7 +246,7 @@ function finalAuthorisationCallback(data) {
 // see if the iframe has redirected after completed challenge
 function checkIfChallengeIsCompleted() {
 	try {
-		return (document.querySelector("[name=threeDSIframe]").contentWindow.location.href == NOTIFICATION_URL)
+		return (document.querySelector("[name=threeDSIframe]").contentWindow.location.href == NOTIFICATION_URL);
 	}
 	catch(error) {
 		// will return CORS error if challenge hasn't been completed yet
@@ -213,11 +262,11 @@ function getCRESFromIframe() {
 // this shouldn't be necessary.. I must be building the response wrong somehow
 function sanitizeJSON(data) {
 	return JSON.parse(data.replace(/'/g, '"').replace(/"\{/g, "{").replace(/\}"/g, '}'));
-};
+}
 
 // utility to output to web page
 function output(number, text) {
-	var containerEl = $("#output");
+	var containerEl = document.querySelector("#output");
 
 	var countEl = document.createElement("div");
 	countEl.innerHTML = "--------------- " + number + " ---------------";
@@ -229,6 +278,6 @@ function output(number, text) {
 	outputContainer.appendChild(outputEl);
 	outputEl.innerHTML = text;
 	containerEl.append(outputContainer);
-};
+}
 
 </script>
