--- a/3DSecure.html
+++ b/3DSecure.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/style.css"/>
 	</head>
 	<body>
-		<form class="clientForm" id="infoForm">
+		<form class="client-form" id="infoForm">
 			<div class="inputHolder">amount: <input type="text" id="value" name="value" value="199"/><br></div>
 			<div class="inputHolder">currency: <input type="text" id="currency" name="currency" value="USD"/><br></div>
 			<div class="inputHolder">number: <input type="text" id="number" name="number" value="5212345678901234"/><br></div>
