--- a/SecuredFieldsDirect.html
+++ b/SecuredFieldsDirect.html
@@ -10,7 +10,7 @@
 
 	<h3>Payment info</h3>
 	<div class="block">
-		<form id="paymentForm" class="clientForm" >
+		<form id="paymentForm" class="client-form" >
 			Value: <input type="text" class="payment-data" name="value" value="1500"/><br>
 			Currency: <input type="text" class="payment-data" name="currency" value="USD"/><br>
 			Reference: <input type="text" class="payment-data" name="reference" value="Localhost Secured Fields"/><br>
