--- a/SecuredFieldsSDK.html
+++ b/SecuredFieldsSDK.html
@@ -11,7 +11,7 @@
 
 	<h3>Payment info</h3>
 	<div class="block">
-		<form id="paymentForm" class="clientForm" >
+		<form id="paymentForm" class="client-form" >
 			Value: <input type="text" class="payment-data" name="value" value="1500"/><br>
 			Currency: <input type="text" class="payment-data" name="currency" value="USD"/><br>
 			Reference: <input type="text" class="payment-data" name="reference" value="Localhost Secured Fields"/><br>
@@ -28,7 +28,7 @@
 	<div id="secured-fields-container" class="inactive">
 		<h3>Secured Fields</h3>
 		<div class="secured-fields-form">
-			<form method="POST" class="clientForm" id="adyen-encrypted-form">
+			<form method="POST" class="client-form" id="adyen-encrypted-form">
 				<span class="brand-container"><img src="" class="brand-container__image" id="brand-container" alt="brand"></span>
 				<input type="hidden" name="txvariant" value="card"/><br>
 				<div class="input-container">
