--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -5,7 +5,7 @@
 
 <body>
 	<div class="checkout" id="checkout">
-		<form class="clientForm" id="infoForm">
+		<form class="client-form" id="infoForm">
 			<div class="inputHolder">Amount: <input type="text" id="value" name="value" value="199"/><br></div>
 			<div class="inputHolder">Currency: <input type="text" id="currency" name="currency" value="USD"/><br></div>
 			<div class="inputHolder">CountryCode: <input type="text" id="countryCode" name="countryCode" value="US"/><br></div>
