--- a/components.html
+++ b/components.html
@@ -11,7 +11,7 @@
 
 	<h3>Payment info</h3>
 	<div class="block">
-		<form id="paymentForm" class="clientForm" >
+		<form id="paymentForm" class="client-form" >
 			Value: <input type="text" class="payment-data" name="value" value="1500"/><br>
 			Currency: <input type="text" class="payment-data" name="currency" value="USD"/><br>
 			CountryCode: <input type="text" class="payment-data" name="countryCode" value="US"/><br>
@@ -21,7 +21,7 @@
 		</form>
 	</div>
 
-	<div id="cardsContainer" class="clientForm hidden">
+	<div id="cardsContainer" class="client-form hidden">
 		<div id="cardComponentHolder"></div>
 		<button id="submitCardsBtn" disabled=true>Pay with card</button>
 	</div>
