update 3ds2 basic flow

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<h3 class="index-header">3D Secure</h3>
 	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
-	<a class="index-link" href="3DSecure2.html">3D Secure 2.0 - Basic</a><br>
+	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2.0 - Basic</a><br>
 	<!-- <a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 - Advanced - Adyen SDK</a><br> -->
 	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced</a><br>
 </body>
