--- a/3DSecure2Basic.html
+++ b/3DSecure2Basic.html
@@ -45,7 +45,7 @@
 						<input class="formEls" type="hidden" name="value" value="1499" id="valueInput"></input>
 						<input class="formEls" type="hidden" name="currency" value="EUR"></input>
 						<input class="formEls" type="hidden" name="reference" value="Localhost 3DS 2.0"></input>
-						<input class="formEls" type="hidden" name="endpoint" value="threeds2_adv_initial_auth"></input>
+						<input class="formEls" type="hidden" name="endpoint" value="threeds2_part1"></input>
 						<input class="formEls" type="hidden" name="userAgent" value="browser"></input>
 					</form>
 				</span>
@@ -91,17 +91,16 @@ function initialize() {
 	const authoriseButton = document.createElement("button");
 	authoriseButton.onclick = submitForm;
 	authoriseButton.innerHTML = "Authorise";
-	authoriseButton.disabled = true;
 	authoriseButton.id = "authoriseBtn";
 	document.querySelector("#authoriseBtnHolder").appendChild(authoriseButton);
 	
 	// add dynamic flowchart
 	let tree = [
-		"Get3dsAvailability",
+		"Initial Authorise",
 		[
 			"Fingerprint Device", 
 			[
-				"Initial Authorise",
+				"Call Authorise3ds2",
 				[
 					"Frictionless",
 					"Challenge Shopper", 
@@ -127,43 +126,6 @@ function initialize() {
 	];
 
 	globals.flowchart = new Flowchart(tree, document.querySelector("#flowchart"));
-
-	// pretend we have cached data on the card
-	common.output('"threeDS2Version": "2.1.0"<br>"threeDSMethodURL": "https://pal-test.adyen.com/threeds2simulator/acs/startMethod.shtml"', "Query cached 3ds2 data");
-}
-
-// perform fingerprint via SDK on page load
-fingerprintDevice();
-function fingerprintDevice() {
-	// generate transID
-	globals.threeDSServerTransID = common.uuid();
-
-	// give the cached (hardcoded) data to the SDK
-	const fingerprintParams = {
-		"threeDSServerTransID": globals.threeDSServerTransID,
-		"threeDSMethodURL": CACHED_THREEDS_URL, 
-		"YOUR_NOTIFICATION_ENDPOINT": NOTIFICATION_URL, 
-		'CONTAINER': document.querySelector("#sdkContainer")
-	};
-	const fingerprintPromise = SDK.getFingerprint(...Object.values(fingerprintParams));
-
-	common.output(fingerprintParams, "Fingerprint request to SDK", "SDK.getFingerprint");
-
-	// handle SDK promise callbacks
-	fingerprintPromise.then((successfulPromiseResponse) => {
-		common.output(successfulPromiseResponse, "Fingerprint response from SDK", "SDK.getFingerprint");
-		globals.fingerprintResponse = successfulPromiseResponse;
-		
-		// enable authorise button
-		document.querySelector("#authoriseBtn").disabled = false;
-
-	}, (failedPromiseResponse) => {
-		common.output("Verification request to SDK failed - check log for more details", "Fingerprint response from SDK");
-		console.log("Verification request to SDK failed:");
-		console.log(failedPromiseResponse);
-	});
-
-	globals.flowchart.setActive("FingerprintDevice");
 }
 
 // send form data to server
@@ -185,22 +147,12 @@ function submitForm(e) {
 	url = url + "&authenticationOnly=" + globals.authenticationOnly;
 
 	// send to server
-	initialAuthoriseCall(url, jsonData);
-
-	// block default form behavior
-	return false;
-}
-
-// called by successful return of promise from SDK.doChallenge
-// form encodes data and sends to server
-function initialAuthoriseCall(url, jsonData) {
-	url = url + "&threeDSCompInd=" + globals.fingerprintResponse.threeDSCompInd + "&threeDSServerTransID=" + globals.threeDSServerTransID;
-	jsonData.threeDSCompInd = globals.fingerprintResponse.threeDSCompInd;
-	jsonData.threeDSServerTransID = globals.threeDSServerTransID;
+	common.AJAXGet(url, initialAuthoriseCallback);
 
 	globals.flowchart.setActive("InitialAuthorise");
 
-	common.AJAXGet(url, initialAuthoriseCallback);
+	// block default form behavior
+	return false;
 }
 
 // receive response from initialAuthoriseCall
@@ -214,8 +166,81 @@ function initialAuthoriseCallback(data) {
 	common.output(request, "Request from server to Adyen", "https://pal-test.adyen.com/pal/servlet/Payment/v40/authorise");
 	common.output(response, "Response from Adyen to server");
 
+	if (response.resultCode === "IdentifyShopper") {
+		// save required data for later
+		globals.threeDSServerTransID = response.additionalData['threeds2.threeDS2ResponseData.threeDSServerTransID'];
+		globals.threeDS2Token = response.additionalData["threeds2.threeDS2Token"].replace(/\\/g, "");
+		globals.initialAuthorisePSPReference = response.pspReference;
+
+		// common.output formatted token in case we want to finish the transaction manually
+		console.log("threeDSToken:");
+		console.log(globals.threeDS2Token);
+
+		// execute the fingerprint via the SDK
+		fingerprintDevice(response.additionalData["threeds2.threeDSMethodURL"]);
+	}
+	else if (response.resultCode === "AuthenticationFinished" || response.resultCode === "Authorised") {
+		// authentication is complete - we can stop here!
+		globals.flowchart.setActive("Frictionless");
+	}
+}
+
+// perform fingerprint via custom SDK
+function fingerprintDevice(threeDSMethodURL) {
+	// generate transID
+	globals.threeDSServerTransID = common.uuid();
+
+	// give the fingerprint data to the SDK
+	const fingerprintParams = {
+		"threeDSServerTransID": globals.threeDSServerTransID,
+		"threeDSMethodURL": threeDSMethodURL, 
+		"YOUR_NOTIFICATION_ENDPOINT": NOTIFICATION_URL, 
+		'CONTAINER': document.querySelector("#sdkContainer")
+	};
+	const fingerprintPromise = SDK.getFingerprint(...Object.values(fingerprintParams));
+
+	common.output(fingerprintParams, "Fingerprint request to SDK", "SDK.getFingerprint");
+
+	// handle SDK promise callbacks
+	fingerprintPromise.then((successfulPromiseResponse) => {
+		common.output(successfulPromiseResponse, "Fingerprint response from SDK", "SDK.getFingerprint");
+		globals.fingerprintResponse = successfulPromiseResponse;
+
+		firstAuthorise3ds2(successfulPromiseResponse.threeDSCompInd);
+
+	}, (failedPromiseResponse) => {
+		common.output("Verification request to SDK failed - check log for more details", "Fingerprint response from SDK");
+		console.log("Verification request to SDK failed:");
+		console.log(failedPromiseResponse);
+	});
+
+	globals.flowchart.setActive("FingerprintDevice");
+}
+
+// call /authorise3ds2 with the result of the fingerprint
+function firstAuthorise3ds2(threeDSCompInd) {
+	const url = common.SERVER_URL;
+	let params = "";
+	params += "?threeDSCompInd=" + threeDSCompInd;
+	params += "&threeDS2Token=" + encodeURIComponent(globals.threeDS2Token);
+	params += "&endpoint=threeds2_part2";
+
+	common.AJAXGet(url + params, firstAuthorise3ds2Callback);
+}
+
+function firstAuthorise3ds2Callback(data) {
+	// parse and output request / response
+	data = common.sanitizeJSON(data);
+
+	const request = data.request;
+	const response = data.response;
+
+	common.output(request, "Request from server to Adyen", "https://pal-test.adyen.com/pal/servlet/Payment/v40/authorise");
+	common.output(response, "Response from Adyen to server");
+
 	if (response.resultCode === "ChallengeShopper") {
 		// put all of the required 3DS 2.0 data into the global namespace
+		// in case the challenge is failed and we want to retry
 		globals.cReqData = {
 			threeDSServerTransID : response.additionalData['threeds2.threeDS2ResponseData.threeDSServerTransID'],
 			acsTransID : response.additionalData['threeds2.threeDS2ResponseData.acsTransID'],
@@ -237,7 +262,6 @@ function initialAuthoriseCallback(data) {
 		doChallenge();
 	}
 	else if (response.resultCode === "AuthenticationFinished" || response.resultCode === "Authorised") {
-		// authentication is complete - we can stop here!
 		globals.flowchart.setActive("Frictionless");
 	}
 }
