rename reactScript.js -> reactForm.js

--- a/HMAC.html
+++ b/HMAC.html
@@ -2,7 +2,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/style.css"/>
 		<script src="scripts/reactComplete.js"></script>
-		<script type="text/jsx" src="scripts/reactScript.js"></script>
+		<script type="text/jsx" src="scripts/reactForm.js"></script>
 	</head>
 	<body>
 		<div id="reactHolder"></div>
