--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
 <body>
 	<h1>Integrations</h1>
 
-	<h3 class="index-header">Hosted Payment Pages (HPP)</h3>
-	<a class="index-link" href="HPP.html">Single Page Flow</a><br>
-	<a class="index-link" href="directory.html">Directory Lookup</a><br>
-	<a class="index-link" href="skipDetails.html">Skip Details</a><br>
-	<a class="index-link" href="HMAC.html">HMAC Calculation</a><br>
+	<h3 class="index-header">3D Secure</h3>
+	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
+	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2.0 - Basic - SDK</a><br>
+	<!-- <a class="index-link" href="3DSecure2AdvancedHelperMethods.html">3D Secure 2.0 - Advanced - Helper Methods</a><br> -->
+	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced - SDK</a><br>
 
 	<h3 class="index-header">Checkout</h3>
 	<a class="index-link" href="checkout.html">Checkout SDK</a><br>
 	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
 	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
 	<a class="index-link" href="components.html">Components</a><br>
+
+<!-- 	<h3 class="index-header">Adyen Wallet</h3>
+	<a class="index-link" href="walletSimulator.html">Simulator</a><br>-->	
 	
 	<h3 class="index-header">Classic API</h3>
 	<a class="index-link" href="CSE.html">Client Side Encryption (CSE)</a><br>
 
-	<h3 class="index-header">3D Secure</h3>
-	<a class="index-link" href="3DSecure.html">3D Secure 1</a><br>
-	<a class="index-link" href="3DSecure2Basic.html">3D Secure 2.0 - Basic</a><br>
-	<!-- <a class="index-link" href="3DSecure2Advanced.html">3D Secure 2.0 - Advanced - Adyen SDK</a><br> -->
-	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2.0 - Advanced</a><br>
+	<h3 class="index-header">Hosted Payment Pages (HPP)</h3>
+	<a class="index-link" href="HPP.html">Single Page Flow</a><br>
+	<a class="index-link" href="directory.html">Directory Lookup</a><br>
+	<a class="index-link" href="skipDetails.html">Skip Details</a><br>
+	<a class="index-link" href="HMAC.html">HMAC Calculation</a><br>
 </body>
 
 </html>
