--- a/3DSecure2Basic.html
+++ b/3DSecure2Basic.html
@@ -158,7 +158,7 @@ function submitForm(e) {
 // receive response from initialAuthoriseCall
 function initialAuthoriseCallback(data) {
 	// parse and output request / response
-	data = common.sanitizeJSON(data);
+	data = JSON.parse(data);
 
 	const request = data.request;
 	const response = data.response;
@@ -230,7 +230,7 @@ function firstAuthorise3ds2(threeDSCompInd) {
 
 function firstAuthorise3ds2Callback(data) {
 	// parse and output request / response
-	data = common.sanitizeJSON(data);
+	data = JSON.parse(data);
 
 	const request = data.request;
 	const response = data.response;
@@ -326,7 +326,7 @@ function retrieve3ds2Result() {
 
 // send auth request using cavv and eci values
 function acquirerAgnosticAuth(data) {
-	data = common.sanitizeJSON(data);
+	data = JSON.parse(data);
 
 	const request = data.request;
 	const response = data.response;
@@ -346,7 +346,7 @@ function adyenTokenAuth(transStatus) {
 
 // get response from authorise3ds2 call
 function adyenTokenAuthCallback(data) {
-	data = common.sanitizeJSON(data);
+	data = JSON.parse(data);
 
 	const request = data.request;
 	const response = data.response;
